welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:19: error: not found: value faireV
	faireV()
        ^